--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,16 +1,12 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
 name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches: [ master ]
 
 jobs:
   build:
@@ -18,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
         python-version: "3.10"
     - name: Install dependencies
@@ -28,7 +24,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install pytest
         export PYTHONPATH="$PWD/src"
-
     - name: Test with pytest
-      run: |
-        python -m pytest
+      run: python -m pytest
